[gd_scene load_steps=14 format=3 uid="uid://cov4fgqxfl0gx"]

[ext_resource type="Script" path="res://main.gd" id="1_uj4n2"]
[ext_resource type="AudioStream" uid="uid://5orhjbx2opnd" path="res://assets/sfx/shoot.ogg" id="2_jpr15"]
[ext_resource type="Material" uid="uid://yab0wjo6c5f3" path="res://crt.tres" id="2_lee5n"]
[ext_resource type="LabelSettings" uid="uid://dx7wtffm41lqp" path="res://fontGreen.tres" id="3_cybb0"]
[ext_resource type="AudioStream" uid="uid://bw0q6j8kbes4m" path="res://assets/sfx/horn.ogg" id="3_ttie7"]
[ext_resource type="AudioStream" uid="uid://dwnrl2ea4r52c" path="res://assets/sfx/race_finish.ogg" id="4_a846k"]
[ext_resource type="LabelSettings" uid="uid://bkx1s8nv5vgd1" path="res://fontSubGreen.tres" id="4_rrwqa"]
[ext_resource type="AudioStream" uid="uid://da2oa37n3m0kp" path="res://assets/sfx/wilhelmscream.mp3" id="5_5y33w"]
[ext_resource type="AudioStream" uid="uid://dnaxkedw33uga" path="res://assets/sfx/track_intro.ogg" id="6_p4sd5"]
[ext_resource type="AudioStream" uid="uid://desfjqgbiqa" path="res://assets/sfx/start_race.ogg" id="7_cp62t"]
[ext_resource type="Texture2D" uid="uid://c3fad0iyx1xs3" path="res://assets/petrillo-fabio-ets.jpg" id="8_57gxn"]

[sub_resource type="FontFile" id="FontFile_0srvv"]
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/18/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_cnvc3"]
font_size = 14
font_color = Color(0, 0, 0, 1)

[node name="Main" type="Node2D"]
position = Vector2(32, 280)
script = ExtResource("1_uj4n2")

[node name="ColorRect" type="ColorRect" parent="."]
material = ExtResource("2_lee5n")
offset_left = -32.0
offset_top = -280.0
offset_right = 1128.0
offset_bottom = 368.0

[node name="Label" type="Label" parent="."]
offset_left = 480.0
offset_top = -72.0
offset_right = 592.0
offset_bottom = -46.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_fonts/font = SubResource("FontFile_0srvv")
text = "TÉLÉGRAPHE"
label_settings = ExtResource("3_cybb0")

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BtnHost" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 440.0
offset_top = -16.0
offset_right = 521.0
offset_bottom = 15.0
text = "Hébérger"
metadata/_edit_use_anchors_ = true

[node name="BtnJoin" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.025
anchor_right = -0.025
offset_left = 536.0
offset_top = -16.0
offset_right = 619.0
offset_bottom = 15.0
text = "Rejoindre"
metadata/_edit_use_anchors_ = true

[node name="SendText" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 384.0
offset_top = -16.0
offset_right = 496.0
offset_bottom = 88.0

[node name="Label" type="Label" parent="SendText"]
layout_mode = 0
offset_left = 32.0
offset_top = -8.0
offset_right = 153.0
offset_bottom = 15.0
text = "Envoyer message:"
label_settings = ExtResource("4_rrwqa")

[node name="TextEdit" type="TextEdit" parent="SendText"]
layout_mode = 1
anchors_preset = -1
offset_left = 160.0
offset_top = -8.0
offset_right = 288.0
offset_bottom = 19.0

[node name="BtnSend" type="Button" parent="SendText"]
layout_mode = 0
offset_left = 208.0
offset_top = 56.0
offset_right = 288.0
offset_bottom = 87.0
text = "Envoyer"

[node name="LabelPreview" type="Label" parent="SendText"]
layout_mode = 0
offset_left = -16.0
offset_top = 24.0
offset_right = 152.0
offset_bottom = 47.0
text = "Prévisualiser la réponse:"
label_settings = ExtResource("4_rrwqa")

[node name="AnswerPreview" type="TextEdit" parent="SendText"]
layout_mode = 0
offset_left = 160.0
offset_top = 24.0
offset_right = 288.0
offset_bottom = 48.0
editable = false

[node name="ReceiveText" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 480.0
offset_top = -32.0
offset_right = 608.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="ReceiveText"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 116.0
offset_bottom = 31.0
text = "Message reçu:"
label_settings = ExtResource("3_cybb0")

[node name="TextDisplay" type="Label" parent="ReceiveText"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 112.0
offset_bottom = 63.0
text = "(en attente...)"
label_settings = ExtResource("3_cybb0")

[node name="Sound" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Dot" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("2_jpr15")

[node name="Dash" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("3_ttie7")

[node name="Win" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("4_a846k")

[node name="GameOver" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("5_5y33w")

[node name="Login" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("6_p4sd5")

[node name="Start" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource("7_cp62t")

[node name="FabioProfilePicture" type="TextureRect" parent="."]
visible = false
offset_left = 755.0
offset_top = -118.0
offset_right = 1077.0
offset_bottom = 129.0
texture = ExtResource("8_57gxn")
expand_mode = 1

[node name="LabelFabio" type="Label" parent="."]
visible = false
offset_left = 862.0
offset_top = -148.0
offset_right = 1030.0
offset_bottom = -125.0
text = "This guy :"
label_settings = SubResource("LabelSettings_cnvc3")

[connection signal="pressed" from="MainMenu/BtnHost" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainMenu/BtnJoin" to="." method="_on_join_pressed"]
[connection signal="pressed" from="SendText/BtnSend" to="." method="_on_btn_send_pressed"]
